src/qml/qml/qqmlcustomparser_p.h
@@ -56,6 +56,7 @@ QT_BEGIN_NAMESPACE
 
 class QQmlCompiledData;
 class QQmlPropertyValidator;
+class QQmlEnginePrivate;
 
 class Q_QML_PRIVATE_EXPORT QQmlCustomParser
 {
@@ -67,8 +68,8 @@ public:
     };
     Q_DECLARE_FLAGS(Flags, Flag)
 
-    QQmlCustomParser() : validator(0), m_flags(NoFlag) {}
-    QQmlCustomParser(Flags f) : validator(0), m_flags(f) {}
+    QQmlCustomParser() : engine(0), validator(0), m_flags(NoFlag) {}
+    QQmlCustomParser(Flags f) : engine(0), validator(0), m_flags(f) {}
     virtual ~QQmlCustomParser() {}
 
     void clearErrors();
@@ -92,6 +93,7 @@ protected:
 
 private:
     QList<QQmlError> exceptions;
+    QQmlEnginePrivate *engine;
     const QQmlPropertyValidator *validator;
     Flags m_flags;
     QBiPointer<const QQmlImports, QQmlTypeNameCache> imports;
