tests/auto/qml/qqmllanguage/tst_qqmllanguage.cpp
@@ -159,6 +159,7 @@ private slots:
     void readonlyObjectProperties();
     void receivers();
     void registeredCompositeType();
+    void registeredCompositeTypeWithEnum();
     void implicitImportsLast();
 
     void basicRemote_data();
@@ -3174,6 +3175,7 @@ void tst_qqmllanguage::initTestCase()
     qmlRegisterType(testFileUrl("CompositeType.qml"), "Test", 1, 0, "RegisteredCompositeType");
     qmlRegisterType(testFileUrl("CompositeType.DoesNotExist.qml"), "Test", 1, 0, "RegisteredCompositeType2");
     qmlRegisterType(testFileUrl("invalidRoot.1.qml"), "Test", 1, 0, "RegisteredCompositeType3");
+    qmlRegisterType(testFileUrl("CompositeTypeWithEnum.qml"), "Test", 1, 0, "RegisteredCompositeTypeWithEnum");
 
     // Registering the TestType class in other modules should have no adverse effects
     qmlRegisterType<TestType>("org.qtproject.TestPre", 1, 0, "Test");
@@ -3346,6 +3348,21 @@ void tst_qqmllanguage::registeredCompositeType()
     VERIFY_ERRORS(0);
     QObject *o = component.create();
     QVERIFY(o != 0);
+
+    delete o;
+}
+
+// QTBUG-43582
+void tst_qqmllanguage::registeredCompositeTypeWithEnum()
+{
+    QQmlComponent component(&engine, testFileUrl("registeredCompositeTypeWithEnum.qml"));
+
+    VERIFY_ERRORS(0);
+    QObject *o = component.create();
+    QVERIFY(o != 0);
+
+    QCOMPARE(o->property("enumValue0").toInt(), static_cast<int>(MyCompositeBaseType::EnumValue0));
+    QCOMPARE(o->property("enumValue42").toInt(), static_cast<int>(MyCompositeBaseType::EnumValue42));
 
     delete o;
 }
